tests/poorly_formed_exports_config_false/poorly_formed_exports_config_false.exp
FLOW STATUS:
Error ---------------------------------------------------------------------------------------- bad-default-export.js:4:3

Exports can only appear at the top level

   4|   module.exports = 42
        ^^^^^^^^^^^^^^



Found 1 error
FLOW CHECK-CONTENTS:
Error ---------------------------------------------------------------------------------------- bad-default-export.js:4:3

Exports can only appear at the top level

   4|   module.exports = 42
        ^^^^^^^^^^^^^^



Found 1 error
